# leaderboards

./: .gitignore  .pre-commit-config.yaml  LICENSE  makefile  pyproject.toml  task_config.yaml
leaderboard_configs/: albanian.yaml  baltic.yaml  bosnian.yaml  bulgarian.yaml  catalan.yaml  croatian.yaml  czech.yaml  danish.yaml  dutch.yaml  english.yaml  estonian.yaml  european.yaml  finnic.yaml  finnish.yaml  french.yaml  german.yaml  greek.yaml  hungarian.yaml  icelandic.yaml  italian.yaml  latvian.yaml  lithuanian.yaml  norwegian.yaml  polish.yaml  portuguese.yaml  romance.yaml  romanian.yaml  serbian.yaml  slavic.yaml  slovak.yaml  slovene.yaml  spanish.yaml  swedish.yaml  ukrainian.yaml
leaderboards/: albanian_all.csv  albanian_all.json  albanian_all_simplified.csv  albanian_nlu.csv  albanian_nlu.json  albanian_nlu_simplified.csv  baltic_all.csv  baltic_all.json  baltic_all_simplified.csv  baltic_nlu.csv  baltic_nlu.json  baltic_nlu_simplified.csv  bosnian_all.csv  bosnian_all.json  bosnian_all_simplified.csv  bosnian_nlu.csv  bosnian_nlu.json  bosnian_nlu_simplified.csv  bulgarian_all.csv  bulgarian_all.json  bulgarian_all_simplified.csv  bulgarian_nlu.csv  bulgarian_nlu.json  bulgarian_nlu_simplified.csv  catalan_all.csv  catalan_all.json  catalan_all_simplified.csv  catalan_nlu.csv  catalan_nlu.json  catalan_nlu_simplified.csv  croatian_all.csv  croatian_all.json  croatian_all_simplified.csv  croatian_nlu.csv  croatian_nlu.json  croatian_nlu_simplified.csv  czech_all.csv  czech_all.json  czech_all_simplified.csv  czech_nlu.csv  (+182 more)
notebooks/: language-spider-plots.ipynb  plot-europe.ipynb
notebooks/country-data/: fo.json
src/: generate_leaderboards.py  link_generation.py  process_results.py
src/leaderboards/: __init__.py  cache.py  leaderboard_generation.py  link_generation.py  result_loading.py  result_processing.py  score_computation.py  utils.py
src/scripts/: generate_leaderboards.py
